changed spelling in index.html

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#myPage">WDLF</a>
+      <a class="navbar-brand" href="index.html">WDLF</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
