--- a/index.html
+++ b/index.html
@@ -203,11 +203,13 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#about">ABOUT</a></li>
+        
         <li><a href="#services">AMENITIES</a></li>
         <li><a href="#portfolio">PORTFOLIO</a></li>
         <li><a href="#pricing">PRICING</a></li>
+        <li><a href="#about">ABOUT</a></li>
         <li><a href="#contact">CONTACT</a></li>
+        
       </ul>
     </div>
   </div>
@@ -226,33 +228,7 @@
   </form>
 </div>
 
-<!-- Container (About Section) -->
-<div id="about" class="container-fluid">
-  <div class="row">
-    <div class="col-sm-8">
-      <h2>About Us</h2><br>
-      <h4>In the fall of 2019, Dunwoody students; Bob, Khali, Jonah, and Liam decided to create a friendly recipe finder website. Their goal is to enhance the cooking experience of food lovers by providing them with a how to-do-it-yourself recipe at home, making the experience of cooking your favorite foods from restaurants accessible to everyone at home, no matter where  you live or how busy you are. Not only is the website  designed to provide users with the recipe, it also provides you with health facts such as calorie counts for each meal and balanced diets.</h4><br>
-      <br><button class="btn btn-default btn-lg">Get in Touch</button>
-    </div>
-    <div class="col-sm-4">
-      <span class="glyphicon glyphicon-signal logo"></span>
-    </div>
-  </div>
-</div>
 
-<div class="container-fluid bg-grey">
-  <div class="row">
-    <div class="col-sm-4">
-      <span class="glyphicon glyphicon-globe logo slideanim"></span>
-    </div>
-    <div class="col-sm-8">
-      <h2>Our Values</h2><br>
-      <h4><strong>MISSION:</strong> We will offer our customers delicious healthy menus, as well as improving their standard of living through ease of use and convenience without skimping on tasty recipes. We want to reduce waste by showing customers what they can make with what they have instead of wasting materials to go to the store.</h4><br>
-      <h4><strong>VISION:</strong> We want to help people improve their health, save money, reduce waste, and learn recipes through offering alternatives and finding ways for people
-        to prepare meals.</h4>
-    </div>
-  </div>
-</div>
 
 <!-- Container (Services Section) -->
 <div id="services" class="container-fluid text-center">
@@ -413,6 +389,34 @@
         </div>
       </div>      
     </div>    
+  </div>
+</div>
+
+<!-- Container (About Section) -->
+<div id="about" class="container-fluid">
+  <div class="row">
+    <div class="col-sm-8">
+      <h2>About Us</h2><br>
+      <h4>In the fall of 2019, Dunwoody students Bob, Khali, Jonah, and Liam decided to create a friendly recipe finder website. Their goal is to enhance the cooking experience of food lovers by providing them with a how to-do-it-yourself recipe at home, making the experience of cooking your favorite foods from restaurants accessible to everyone at home, no matter where  you live or how busy you are. Not only is the website  designed to provide users with the recipe, it also provides you with health facts such as calorie counts for each meal and balanced diets.</h4><br>
+      <br><a href="#contact" class="btn btn-default btn-lg">Get in Touch</a>
+    </div>
+    <div class="col-sm-4">
+      <span class="glyphicon glyphicon-signal logo"></span>
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid bg-grey">
+  <div class="row">
+    <div class="col-sm-4">
+      <span class="glyphicon glyphicon-globe logo slideanim"></span>
+    </div>
+    <div class="col-sm-8">
+      <h2>Our Values</h2><br>
+      <h4><strong>MISSION:</strong> We will offer our customers delicious healthy menus, as well as improving their standard of living through ease of use and convenience without skimping on tasty recipes. We want to reduce waste by showing customers what they can make with what they have instead of wasting materials to go to the store.</h4><br>
+      <h4><strong>VISION:</strong> We want to help people improve their health, save money, reduce waste, and learn recipes through offering alternatives and finding ways for people
+        to prepare meals.</h4>
+    </div>
   </div>
 </div>
 
