added javascript functionality to two buttons in header for subscribe and footer for support

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     <div class="input-group">
       <input type="email" class="form-control" size="10" placeholder="Email Address" required>
       <div class="input-group-btn">
-        <button type="button" class="btn btn-danger">Subscribe</button>
+        <button onClick="subButton()" type="button" class="btn btn-danger">Subscribe</button>
       </div>
     </div>
   </form>
@@ -442,7 +442,7 @@
       <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea><br>
       <div class="row">
         <div class="col-sm-12 form-group">
-          <button class="btn btn-default pull-right" type="submit">Send</button>
+          <button onClick = "supportButton()" class="btn btn-default pull-right" type="submit">Send</button>
         </div>
       </div>
     </div>
@@ -490,6 +490,14 @@ $(document).ready(function(){
     });
   });
 })
+
+function subButton() {
+  alert("Thank you! Check your email soon for updates and alerts about our content");
+}
+
+function supportButton() {
+  alert("Thank you! We will get back to you within 24 hours of receiving your inquiry");
+}
 </script>
 
 </body>
