added CSS property to fix color in search section in header

--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@ form.example::after {
     padding: 100px 25px;
     font-family: Montserrat, sans-serif;
   }
+  .jumbotron-input {
+    color: #000000;
+  }
   .container-fluid {
     padding: 60px 50px;
   }
@@ -279,7 +282,7 @@ form.example::after {
   <form>
     <div class="input-group">
         <form class="example" action="/action_page.php" style="margin:auto;max-width:300px">
-          <input type="text" placeholder="Search.." name="search2">
+          <input class="jumbotron-input" type="text" placeholder="Search.." name="search2">
           <button type="submit"><i class="fa fa-search"></i></button>
         </form>
     </div>
